@@ -26,7 +26,6 @@ import java.util.List;
 import org.apache.maven.artifact.repository.ArtifactRepository;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.logging.Log;
-import org.apache.maven.plugins.annotations.Execute;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
@@ -35,11 +34,10 @@ import org.apache.maven.project.MavenProject;
 
 /**
  * Installs bundle details in the local OBR repository (command-line goal)
- * 
+ *
  * @author <a href="mailto:dev@felix.apache.org">Felix Project Team</a>
  */
-@Mojo( name = "install-file", requiresProject = false )
-@Execute( phase = LifecyclePhase.INSTALL )
+@Mojo( name = "install-file", requiresProject = false, defaultPhase = LifecyclePhase.INSTALL )
 public final class ObrInstallFile extends AbstractFileMojo
 {
     /**
